add more boilerplate code for better error handling

--- a/meson.build
+++ b/meson.build
@@ -3,8 +3,10 @@ project('boiler', 'cpp',
   default_options : ['warning_level=3', 'cpp_std=c++23']
 )
 
+add_project_link_arguments('-lstdc++_libbacktrace', '-lstdc++exp', language: 'cpp')
+
 app_deps = [
-  dependency('fmt')
+  dependency('fmt'),
 ]
 
 app_includes = [
@@ -15,23 +17,17 @@ app_sources = [
   'src/app/app.cc'
 ]
 
-app = static_library('app',
+app = library('app',
   app_sources,
   install: true,
-  include_directories: [
-    app_includes
-  ],
-  dependencies: [
-    app_deps
-  ]
+  include_directories: [app_includes],
+  dependencies: [app_deps]
 )
 
 exe = executable(
   'app',
   'src/main.cc',
-  include_directories: [
-    app_includes
-  ],
+  include_directories: [app_includes],
   install: true,
   link_with: [app]
 )
