initial upload of project files

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
-project('project_name_here', 'cpp',
+project('nvidia-fand', 'cpp',
   version : '0.1',
-  default_options : ['warning_level=everything', 'cpp_std=c++23']
+  default_options : ['warning_level=everything', 'cpp_std=c++26']
 )
 
 add_project_link_arguments('-lstdc++exp', '-lstdc++exp', language: 'cpp')
@@ -8,6 +8,8 @@ add_project_link_arguments('-lstdc++exp', '-lstdc++exp', language: 'cpp')
 app_deps = [
   # app dependencies
   # <print> got implemented on GCC 14 so fmt is out
+  dependency('nlohmann_json'),
+  dependency('nvidia-ml')
 ]
 
 app_includes = [
@@ -18,18 +20,10 @@ app_sources = [
   'src/app/app.cc'
 ]
 
-app = library('app',
-  app_sources,
-  install: true,
-  include_directories: [app_includes],
-  dependencies: [app_deps]
-)
-
 exe = executable(
-  'app',
-  'src/main.cc',
+  'nvidia-fand',
+  [app_sources, 'src/main.cc'],
   include_directories: [app_includes],
   dependencies: [app_deps],
-  install: true,
-  link_with: [app]
+  install: true
 )
